jackett/jackett.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: jackett
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      nodeSelector:
        pvc: "true" # pvc only supported on rocky linux nodes
      containers:
      - name: jackett
        image: linuxserver/jackett:0.22.756
        volumeMounts:
        - name: pv
          mountPath: /config
          subPath: jackett
      securityContext:
        # runAsUser: 1032
        # runAsGroup: 65536
        fsGroup: 65536
      volumes:
      - name: pv
        persistentVolumeClaim:
          claimName: jackett
