jackett/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett
  name: jackett
  namespace: jackett
spec:
  ports:
  - name: http
    port: 9117
    protocol: TCP
    targetPort: 9117
  selector:
    app: jackett
