jackett/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: jackett
  name: jackett
  namespace: jackett
spec:
  rules:
  - host: jackett.sauerwein.se
    http:
      paths:
      - backend:
          service:
            name: jackett
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - jackett.sauerwein.se
    secretName: jackett-cert
